--- a/src/components/me.css
+++ b/src/components/me.css
@@ -275,3 +275,54 @@
 }
 
 }
+
+
+
+.skill{
+ margin-bottom: 1px;
+ 
+  color: blueviolet;
+
+}
+
+.skills {
+  text-align: right;
+
+  
+  color: white;
+}
+
+.html {
+  width: 90%;
+ background-color: #04AA6D;
+
+}
+.css {
+  width: 80%; 
+  background-color: #2196F3;
+}
+
+.bootstrap {
+  width: 50%; 
+  background-color: #2196F3;
+}
+
+.js {
+  width: 65%; 
+  background-color: #f44336;
+}
+
+.jquery {
+  width: 50%; 
+  background-color: #f44336;
+}
+
+.react {
+  width: 50%; 
+  background-color: #f44336;
+}
+
+.gatsby {
+  width: 50%; 
+  background-color: #f44336;
+}
