--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -4,17 +4,17 @@ body {
   background: black;
 }
 
-.heading{
-
+.heading {
   display: flex;
   padding-top: 50px;
   padding-bottom: 5px;
-
-
 }
 
+h1 {
+  text-align: center;
+}
 
-.img1{
+.img1 {
   padding-left: 500px;
 }
 
@@ -33,10 +33,10 @@ body {
 }
 
 .timeline::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 2px;
-  background: #006E51;
+  background: #006e51;
   top: 0;
   bottom: 0;
   left: 50%;
@@ -59,14 +59,14 @@ body {
 }
 
 .container1::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 16px;
   height: 20px;
   top: calc(50% - 8px);
   right: -8px;
   background: #ffffff;
-  border: 2px solid #006E51;
+  border: 2px solid #006e51;
   border-radius: 16px;
   z-index: 1;
 }
@@ -76,13 +76,13 @@ body {
 }
 
 .container1::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 50px;
   height: 2px;
   top: calc(50% - 1px);
   right: 8px;
-  background: #006E51;
+  background: #006e51;
   z-index: 1;
 }
 
@@ -97,12 +97,11 @@ body {
   text-align: center;
   font-size: 14px;
   font-weight: bold;
-  color: #006E51;
+  color: #006e51;
   text-transform: uppercase;
   letter-spacing: 1px;
   z-index: 1;
 }
-
 
 .container1.left .date {
   right: -75px;
@@ -112,8 +111,6 @@ body {
   left: -75px;
 }
 
-
-
 .container1 .icon {
   position: absolute;
   display: inline-block;
@@ -121,12 +118,12 @@ body {
   height: 40px;
   padding: 9px 0;
   top: calc(50% - 20px);
-  background: #F6D155;
-  border: 2px solid #006E51;
+  background: #f6d155;
+  border: 2px solid #006e51;
   border-radius: 40px;
   text-align: center;
   font-size: 18px;
-  color: #006E51;
+  color: #006e51;
   z-index: 1;
 }
 
@@ -140,7 +137,7 @@ body {
 
 .container1 .content {
   padding: 30px 90px 30px 30px;
-  background: #F6D155;
+  background: #f6d155;
   position: relative;
   border-radius: 0 500px 500px 0;
 }
@@ -148,14 +145,13 @@ body {
 .container1.right .content {
   padding: 30px 30px 30px 90px;
   border-radius: 500px 0 0 500px;
-
 }
 
 .container1 .content h2 {
   margin: 0 0 10px 0;
   font-size: 18px;
   font-weight: normal;
-  color: #006E51;
+  color: #006e51;
 }
 
 .container1 .content p {
@@ -163,11 +159,9 @@ body {
   font-size: 16px;
   line-height: 22px;
   color: #000000;
-
 }
 
-
-.word{
+.word {
   font-size: 14px;
 }
 
@@ -186,7 +180,7 @@ body {
     left: 0%;
   }
 
-  .container1.left::after, 
+  .container1.left::after,
   .container1.right::after {
     left: 82px;
   }
@@ -194,7 +188,7 @@ body {
   .container1.left::before,
   .container1.right::before {
     left: 100px;
-    border-color: transparent #006E51 transparent transparent;
+    border-color: transparent #006e51 transparent transparent;
   }
 
   .container1.left .date,
